# fastcond

./: .clang-format  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOYMENT.md  License.md  MODERNIZATION_SUMMARY.md  README.md  benchmark-history.json  benchmark-results.json  benchmark-results.md  compare_yield.sh  gil-fairness-results.json  gil-fairness.html  index.html  platform-history.json  pyproject.toml  test_yield_impact.sh
.github/: copilot-instructions.md  deployment_trigger.md
.github/workflows/: benchmarks.yml  ci.yml  release.yml
benchmarks/2dc69793a45564dc9c11b0bfb89655012e7d8471/: benchmark-results.json  benchmark-results.md  index.html
benchmarks/3b9c6520cf6aa0a65865707f5bf0debe3d850dab/: benchmark-results.json  benchmark-results.md
benchmarks/3d47b8f12d5f49468eadada089fba1cd1b6673ef/: benchmark-results.json  benchmark-results.md  index.html
benchmarks/5ee8c60c2d69151645e2b287b317a79c96f99ba1/: benchmark-results.json  benchmark-results.md  index.html
benchmarks/6c8a665b1d3257f71ae0b5bf40d65b2fd0dc957f/: BENCHMARKS-QUICKSTART.md  benchmark-results.json  benchmark-results.md
benchmarks/787f8a0f8b97c46fcb0679e2f8e60b390da2005a/: benchmark-results.json  benchmark-results.md  index.html
benchmarks/7cac3f211dd60e0261af005412dba89b08616bc8/: benchmark-results.json  benchmark-results.md  index.html
benchmarks/84a347451559d3a998d497d56170b2cc3955b18b/: benchmark-results.json  benchmark-results.md  index.html  performance-analysis.md
benchmarks/faa52fa9938f756b48be16741b9d937fac42a50f/: benchmark-results.json  benchmark-results.md
cmake/: fastcondConfig.cmake.in
dev-docs/: BENCHMARK-VARIABILITY-ANALYSIS.md  BENCHMARKS-QUICKSTART.md  DEPLOY-NOW.md  DEPLOYMENT.md  README.md  benchmarking.md  test-hanging-issue.md
docs/: benchmark-results.json  benchmark-results.md  benchmarking.md  ci-benchmarks.md  gil-fairness-results.json  gil-fairness.html  index.html
fastcond/: fastcond.c  fastcond.h  fastcond_patch.h  gil.c  gil.h  native_primitives.h
performance/: index.html  performance-comparison.md  performance-summary.json  root-index.html
scripts/: HISTORICAL_TRACKING.md  analyze_benchmark_trends.py  analyze_gil_fairness.sh  analyze_performance.py  benchmark.sh  benchmark_json.py  benchmark_runner.py  format.sh  generate_gil_fairness_html.py  generate_html.py  generate_root_page.py  gil_benchmark_json.py  pyproject.toml  run_benchmarks.sh  run_gil_fairness_analysis.sh  run_performance_benchmarks.sh  run_tests.sh  setup_github_pages.sh  store_benchmark_history.py  visualize.py  visualize_gil_fairness.py
test/: .gitignore  GIL_TESTS.md  Makefile  gcd_test.c  gil_benchmark.c  gil_benchmark_fc  gil_benchmark_fc_unfair  gil_benchmark_native  gil_benchmark_native_unfair  gil_test.c  gil_test_fc  gil_test_fc_unfair  gil_test_native  patch_test.c  qtest.c  run_gil_comparison.sh  simple_init_test.c  sizeof_test.c  strongtest.c  test_atomics.c  test_gil_exclusion.c  test_native_cond.c  test_portability.h
